<resources>
    <string name="app_name">AgeinMins</string>
    <string name="calculate_your">Calculate Your</string>
    <string name="age">Age</string>
    <string name="in_mins">In Minutes</string>
    <string name="button">calculate</string>
    <string name="textview">30/01/1999</string>
    <string name="selected_date">Selected Date</string>
    <string name="_1625761572">1625761572</string>
</resources>